--- a/app/sass/base/_utilities.scss
+++ b/app/sass/base/_utilities.scss
@@ -1,3 +1,3 @@
 .u-center-text { text-align: center;}
-.u-margin-bottom-big {margin-bottom: 8rem;}
-.u-margin-bottom-small {margin-bottom: 2rem;}
+.u-padding-big {padding: 10.5rem 0;}
+.u-padding-small {padding: 9rem 0;}
