--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -10,9 +10,11 @@
 
 @import 'components/_button';
 @import 'components/_main-nav';
+@import 'components/_defenition';
 
+@import 'layout/_grid';
 @import 'layout/_header';
 @import 'layout/_first-screen';
-@import 'layout/_grid';
+@import 'layout/_second-screen';
 
 @import 'pages/_home';
