--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -11,10 +11,21 @@
 @import 'components/_button';
 @import 'components/_main-nav';
 @import 'components/_defenition';
+@import 'components/_features';
+@import 'components/_curators';
+@import 'components/_issues';
+@import 'components/_about';
+@import 'components/_price';
+@import 'components/_registration';
+@import 'components/_contacts';
+
+
 
 @import 'layout/_grid';
 @import 'layout/_header';
 @import 'layout/_first-screen';
 @import 'layout/_second-screen';
+@import 'layout/_third-screen';
+@import 'layout/_fourth-screen';
 
 @import 'pages/_home';
